Update: #40: Stick tab headers to top when scrolling a panel -- Fixed overflow behaviour in mini player mode.

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -153,7 +153,7 @@
 	}
 
 	#panelContainer {
-		height: 100%;
+		height: 90%;
 		overflow-y: auto;
 	}
 
@@ -161,7 +161,7 @@
 		position: absolute;
 		left: 0;
 		width: 100%;
-		height: 97%;
+		height: 100%;
 		z-index: 2;
 		opacity: 0.9;
 	 }
